# layton-eval

./: .gitignore  README.md  pyproject.toml
src/layton_eval/: chatbot.py  get_eng_html.py  scrape_htmls.py  structure_input.py  structure_output.py
